--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,13 @@
 {
     "name": "mata/mata-ar-history",
-    "description": "Takes ownership of versioning of AR models",
+    "description": "Provides convenient method for versioning AR models",
     "keywords": ["yii2", "mata-ar-history", "versions", "mata"],
     "type": "yii2-extension",
     "license": "MIT",
     "support": {
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
-        "codeception/codeception": "*",
-        "yiisoft/yii2-codeception": "*",
-        "yiisoft/yii2-faker": "*"
     },
     "autoload": {
         "psr-4": {
