added bootstrap to composer, bug fixes
Signed-off-by: Marcin Wiatr <marcin@qi-interactive.com>

--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,8 @@
         "psr-4": {
             "mata\\arhistory\\": ""
         }
+    },
+    "extra": {
+        "bootstrap": "mata\\arhistory\\Bootstrap"
     }
 }
